k8s/weather-service-deployment.yaml
kind: "Deployment"
apiVersion: "apps/v1"
metadata: 
  name: "weather-service-node"

spec:
  replicas: 2
  selector: 
    matchLabels:
       app: "weather-service-node"
  template:
    metadata:
      labels:
        app: "weather-service-node"
    spec:
      containers:
        - name: "weather-service"
          image: "docker.io/whatstheweatherlike/weather-service"
          terminationMessagePath: "/dev/termination-log"
          terminationMessagePolicy: "File"
          imagePullPolicy: "Always"
      restartPolicy: "Always"
      terminationGracePeriodSeconds: 30
      dnsPolicy: "ClusterFirst"
      schedulerName: "default-scheduler"
