k8s/weather-service-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: weather-service-ingress
spec:
  backend:
    serviceName: weather-service
    servicePort: 80
